# icg-prestashop-sync

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  test-results.xml
.engram/: config.json
.github/workflows/: quality.yml
apps/catalog/: models.py  variants.py
apps/catalog/migrations/: 0001_initial.py  0002_manufacturer_sync_tracking.py  0003_attributegroup_attributevalue.py  0004_taxrulemapping.py  0005_category_product_categories_product_category_default.py  0006_category_last_sync_error_category_last_synced_at_and_more.py  0007_alter_category_prestashop_id.py  0008_add_product_discount_percent.py  0009_add_prestashop_specific_price_id.py  0010_product_discount_sync_required.py  0011_alter_product_discount_percent.py  0012_alter_product_reference.py  0013_product_prestashop_id_combination_prestashop_id_and_more.py  0014_per_product_color_groups.py  0015_combination_last_icg_modified_date_and_more.py
apps/core/: models.py
apps/db_explorer/: apps.py  db.py  sql.py  urls.py  views.py
apps/db_explorer/templates/db_explorer/: base.html  relationships.html  table_detail.html  table_list.html
apps/icg/: apps.py  importer.py  services.py
apps/icg/management/commands/: backfill_last_icg_modified_date.py  bulk_refresh_prices_from_icg.py  rebuild_reference_from_icg.py
apps/operations/: admin.py  sites.py
apps/prestashop/: apps.py  attribute_groups.py  client.py  customers.py  services.py
apps/sales/: models.py  services.py
apps/sales/migrations/: 0001_initial.py  0002_prestashoporderline_override_combination.py  0003_prestashoporderline_prestashop_order_detail_id.py  0004_prestashoporder_current_state.py
apps/sync/: cursor_service.py  customer_export.py  errors.py  locking.py  models.py  order_export.py  reconciliation.py  tasks.py
apps/sync/migrations/: 0001_initial.py  0002_export_manufacturer_job_type.py  0003_synclock_alter_syncjob_job_type_syncerror.py  0004_customer_sync_types.py  0005_order_sync_types.py
config/: asgi.py  celery.py  sentry.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: architecture.md  deploy-topology.md  icg-view-schemas.md
openspec/: README.md
openspec/changes/: README.md
openspec/changes/templates/: design.md  proposal.md  spec.md  tasks.md
templates/admin/: index.html
tests/: test_admin.py  test_backfill_last_icg_modified_date.py  test_bootstrap_prestashop_cursors.py  test_category_export.py  test_cleanup_duplicate_attribute_values.py  test_client_attributes.py  test_combination_export.py  test_customer_client.py  test_customer_export.py  test_db_explorer.py  test_delete_duplicate_prestashop_combinations.py  test_discontinued_filter.py  test_discount_export.py  test_icg_import.py  test_icg_services.py  test_import_missing_color_groups.py  test_inspect_reference_alignment.py  test_inventory_prestashop_catalog.py  test_manufacturer_export.py  test_order_client.py  test_order_export.py  test_price_export.py  test_product_export.py  test_rebuild_reference_from_icg.py  test_reconcile_prestashop_attribute_mappings.py  test_reconcile_prestashop_combinations.py  test_reconcile_prestashop_products.py  test_repair_single_axis_reference.py  test_report_prestashop_missing_combinations.py  test_report_prestashop_missing_reference_comparison.py  test_report_prestashop_multi_color_products.py  test_report_prestashop_unresolved_combinations.py  test_report_problem_references_for_shop.py  test_reset_prestashop_ids.py  test_retry_failed_sync_jobs.py  test_sales_services.py  test_smoke.py  test_stock_export.py  test_sync_errors.py  test_variant_placeholders.py  (+1 more)
(+23 files in other folders)
