[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*"]

[project]
name = "icg-prestashop-sync"
version = "0.1.0"
description = "ICG Manager to Prestashop synchronization service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.2,<6",
  "celery>=5.4,<6",
  "redis>=5.0,<6",
  "psycopg[binary]>=3.2,<4",
  "pyodbc>=5.1,<6",
  "python-dotenv>=1.0,<2",
  "requests>=2.32,<3",
  "gunicorn>=21,<23",
  "whitenoise>=6.9,<7",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pre-commit>=4.0,<5",
  "pytest>=8.3,<9",
  "pytest-cov>=5.0,<6",
  "pytest-django>=4.9,<5",
  "ruff>=0.6,<0.7",
]

[tool.mypy]
python_version = "3.12"
files = [
  "apps/icg/services.py",
  "apps/prestashop/client.py",
  "config/settings",
]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
pretty = true

[[tool.mypy.overrides]]
module = ["celery", "django.conf", "pyodbc"]
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501"]

[tool.coverage.run]
branch = true
source = ["apps", "config"]
omit = [
  "*/migrations/*",
  "manage.py",
  "config/asgi.py",
  "config/wsgi.py",
]

[tool.coverage.report]
skip_covered = false
show_missing = true
precision = 2
